--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,16 @@
 <resources>
     <string name="app_name">Multicards</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_cardset_picker">CardsetPickerActivity</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+
+    <string-array name="tab_items_cardsetpicker">
+        <item>Search</item>
+        <item>Recent</item>
+        <item>Favorites</item>
+    </string-array>
+
+    <string name="download_cardset_dialog_message">Downloading cardset</string>
+
+    <string name="cardset_search_message">Enter keywords</string>
 </resources>
