--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Мультикардс</string>
+    <string name="app_name">Мульти кардс</string>
 
     <string-array name="tab_items_cardsetpicker">
         <item>Поиск</item>
@@ -13,4 +13,10 @@
     <string name="cardset_search_message">Введите название карточек</string>
 
     <string name="waiting_opponent_dialog_message">Поиск соперников</string>
+
+    <string-array name="dialog_items_multiplayer">
+        <item>Случайный соперник</item>
+        <item>Пригласить друга</item>
+        <item>Подключиться к другу</item>
+    </string-array>
 </resources>
