--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,11 @@
 
     <string name="cardset_search_message">Enter keywords</string>
     <string name="waiting_opponent_dialog_message">Searching for opponents</string>
+
+    <string-array name="dialog_items_multiplayer">
+        <item>Random opponent</item>
+        <item>Invite friend</item>
+        <item>Join friend</item>
+    </string-array>
+
 </resources>
