--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,6 @@
     <string name="string_main_menu_multiplayer">Multiplayer</string>
     <string name="string_main_menu_settings">Settings</string>
 
+    <string name="alert_select_image">Pick avatar image</string>
+
 </resources>
