--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="cardset_search_message">Enter keywords</string>
     <string name="waiting_opponent_dialog_message">Searching for opponents</string>
 
+    <string name="string_your_id">Your id is:</string>
+
     <string name="string_enter_opponent_nickname">Enter opponent nickname</string>
 
     <string name="string_choose_opponent">Choose opponent</string>
@@ -24,7 +26,7 @@
         <item>Join game</item>
     </string-array>
 
-    <string name="button_like">Like</string>
+    <string name="button_like">Like cardset!</string>
     <string name="string_popular_cardsets">Popular cardsets</string>
     <string name="string_game_stopped">Game interrupted. Check network connectivity</string>
 
@@ -33,5 +35,15 @@
     <string name="string_main_menu_settings">Settings</string>
 
     <string name="alert_select_image">Pick avatar image</string>
+
+    <string name="dialog_uploading_avatar">Uploading avatar</string>
+
+    <string name="dialog_name_taken">The name is taken, please try another one</string>
+
+    <string name="string_winner">Winner</string>
+
+    <string name="string_winner_you">You win!</string>
+
+    <string name="string_choose_tags">Pick tags</string>
 
 </resources>
