--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,8 @@
     <string name="string_ok">OK</string>
     <string name="string_cancel">Cancel</string>
 
+    <string name="string_invert_cards">Invert title and description</string>
+
+    <string name="string_poor_network">Poor network connectivity</string>
+
 </resources>
