--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -57,4 +57,6 @@
 
     <string name="string_empty_cardset">Извините, в наборе недостаточно карточек</string>
 
+    <string name="string_answers">Ваши ответы</string>
+
 </resources>
