--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Multicards</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_cardset_picker">CardsetPickerActivity</string>
+    <string name="title_activity_gameover">GameOverActivity</string>
     <string name="section_format">Hello World from section: %1$d</string>
 
     <string-array name="tab_items_cardsetpicker">
@@ -62,5 +63,7 @@
     <string name="string_poor_network">Poor network connectivity</string>
 
     <string name="string_empty_cardset">Sorry, cardset does not have enough words</string>
+
+    <string name="string_answers">Your answers</string>
 
 </resources>
