--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,5 +71,9 @@
 
     <string name="string_downloading">Downloading...</string>
 
+    <string name="string_game_invitation">invites you to play Multicards</string>
+    <string name="string_play_now">Play now</string>
+    <string name="string_play_later">Dismiss</string>
+
 
 </resources>
