- Implemented Achievements Log

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -58,6 +58,7 @@
     <string name="string_empty_cardset">Извините, в наборе недостаточно карточек</string>
 
     <string name="string_answers">Ваши ответы</string>
+    <string name="string_achievements">Ваши награды</string>
 
     <string name="string_downloading">Идет загрузка...</string>
 
