--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,7 @@
     <string name="string_empty_cardset">Sorry, cardset does not have enough words</string>
 
     <string name="string_answers">Your answers</string>
+    <string name="string_achievements">Your achievements</string>
 
     <string name="playMarketDetailsLink" translatable="false">market://details?id=</string>
     <string name="playMarketDetailsLinkAlt" translatable="false">https://play.google.com/store/apps/details?id=</string>
