- Added user not found message

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,4 +84,6 @@
     More details at www.github.com/aboev/multicards\n
     Flash cards provided by Quizlet</string>
 
+    <string name="string_user_not_found">Player not found, please check username</string>
+
 </resources>
