--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -74,4 +74,6 @@
     More details at www.github.com/aboev/multicards\n
     Flash cards provided by Quizlet</string>
 
+    <string name="string_user_not_found">Игрок не найден, пожалуйста уточните имя</string>
+
 </resources>
