--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -19,11 +19,24 @@
     <string name="string_enter_opponent_nickname">Введите имя соперника (указано на экране)</string>
 
     <string name="string_choose_opponent">Выберите соперника</string>
+    <string name="string_choose_game">Выберите игру</string>
+    <string name="string_random_opponent">Случайный противник</string>
     <string-array name="dialog_items_multiplayer">
         <item>Случайный соперник</item>
         <item>Начать свою игру</item>
         <item>Присоединиться к игре</item>
     </string-array>
+
+    <string-array name="dialog_multiplayer">
+        <item>Новая игра</item>
+        <item>Присоединиться к игре</item>
+    </string-array>
+
+    <string name="string_invitation">приглашает сыграть</string>
+    <string name="button_play">Играть</string>
+
+    <string name="string_ready_question">Вы готовы?</string>
+    <string name="string_ready">готов/а</string>
 
     <string name="button_like">Лайкнуть набор</string>
     <string name="button_comment">Комментировать</string>
