--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -11,7 +11,8 @@
     <string name="download_cardset_dialog_message">Загрузка карточек</string>
 
     <string name="cardset_search_message">Введите название карточек</string>
-
+    <string name="string_starting_game">Запускаем игру</string>
+    <string name="string_inviting_opponent">Приглашаем соперников</string>
     <string name="waiting_opponent_dialog_message">Поиск соперников</string>
 
     <string name="string_your_id">Ваш id:</string>
