--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="download_cardset_dialog_message">Downloading cardset</string>
 
     <string name="cardset_search_message">Enter keywords</string>
+    <string name="string_starting_game">Starting game</string>
+    <string name="string_inviting_opponent">Inviting opponent</string>
     <string name="waiting_opponent_dialog_message">Searching for opponents</string>
 
     <string name="string_your_id">Your id is:</string>
