--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -44,7 +44,7 @@
     <string name="button_like">Лайкнуть набор</string>
     <string name="button_comment">Комментировать</string>
     <string name="string_popular_cardsets">Популярные наборы</string>
-    <string name="string_game_stopped">Игра прервана. Проверьте соединение с интернетом</string>
+    <string name="string_game_stopped">Игра прервана</string>
 
     <string name="string_main_menu_train">Тренировка</string>
     <string name="string_main_menu_multiplayer">Играть вдвоем</string>
