--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,7 +47,7 @@
     <string name="button_like">Like cardset!</string>
     <string name="button_comment">Leave comment!</string>
     <string name="string_popular_cardsets">Popular cardsets</string>
-    <string name="string_game_stopped">Game interrupted. Check network connectivity</string>
+    <string name="string_game_stopped">Game interrupted</string>
 
     <string name="string_main_menu_train">Train</string>
     <string name="string_main_menu_multiplayer">Multiplayer</string>
