- Implemented country flags

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -96,4 +96,6 @@
     <string name="action_settings">Настройки</string>
     <string name="string_winner_you">Вы победили!</string>
 
+    <string name="string_played">Играли </string>
+
 </resources>
