--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,4 +105,6 @@
 
     <string name="string_user_not_found">Player not found, please check username</string>
 
+    <string name="string_played">Played</string>
+
 </resources>
