--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="cardset_search_message">Enter keywords</string>
     <string name="string_starting_game">Starting game</string>
     <string name="string_inviting_opponent">Inviting opponent</string>
+    <string name="string_accepting_invitation">Accepting invitation</string>
     <string name="string_waiting_opponent">Waiting opponent</string>
     <string name="string_opponent_busy">Opponent is not available</string>
     <string name="waiting_opponent_dialog_message">Searching for opponents</string>
