- Implemented cardset details view

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -105,4 +105,6 @@
         <item>Перевернуть карточки</item>
     </string-array>
 
+    <string name="string_loading">Загрузка</string>
+
 </resources>
